objects/DALMIA_Student__c.object
<CustomObject>
    <description>It stores information about students</description>
    <fields>
        <fullName>Dalmia_Age__c</fullName>
        <formula>IF( NOT( ISBLANK( Dalmia_Date_Of_Birth__c ) ) ,   IF( DATE( 2000 , MONTH( Dalmia_Date_Of_Birth__c ) , DAY( Dalmia_Date_Of_Birth__c ) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ),      YEAR (Today()) - YEAR ( Dalmia_Date_Of_Birth__c ),      YEAR (Today()) - YEAR ( Dalmia_Date_Of_Birth__c ) -1 ),   null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dalmia_Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dalmia_Date_Of_Birth__c</fullName>
        <inlineHelpText>Enter Correct Date Of Birth</inlineHelpText>
        <label>Date Of Birth</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dalmia_Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dalmia_State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Dalmia_Country__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TAMILNADU</fullName>
                </value>
                <value>
                    <fullName>KARNATAKA</fullName>
                </value>
                <value>
                    <fullName>NEW JERSEY</fullName>
                </value>
                <value>
                    <fullName>NEWYORK</fullName>
                </value>
                <value>
                    <fullName>MANCHESTER</fullName>
                </value>
                <value>
                    <fullName>LONDON</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dalmia_Student_Email__c</fullName>
        <label>Dalmia Student Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Dalmia_Student_Name__c</fullName>
        <label>Student Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dalmis_SSN__c</fullName>
        <label>SSN</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leave_Status__c</fullName>
        <label>Leave Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Applied</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_Id__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Student</label>
    <nameField>
        <displayFormat>DAL-{000000}</displayFormat>
        <label>Enrollment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <recordTypes>
        <fullName>Dalmia_India</fullName>
        <active>true</active>
        <description>It will show only Dalmia India</description>
        <label>Dalmia India</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dalmia_UK</fullName>
        <active>true</active>
        <description>Contains records for UK</description>
        <label>Dalmia UK</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dalmia_USA</fullName>
        <active>true</active>
        <description>Contains records for USA</description>
        <label>Dalmia USA</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Dalmia_StudentAgeValidation</fullName>
        <active>true</active>
        <description>This Validation is for Student Age and students cannot be created if age is less than 15</description>
        <errorConditionFormula>IF( Dalmia_Age__c&lt;=15 , True, False)</errorConditionFormula>
        <errorMessage>Please enter the student age which should be greater than 15</errorMessage>
    </validationRules>
</CustomObject>